# cv-maker-app

./: .gitignore  CONTRIBUTING.md  README.md  Readme.md  setup.sh
.github/workflows/: ci.yml
backend/: .env.example  Cargo.toml
backend/src/: cv_generator.rs  main.rs  models.rs  routes.rs
database/: schema.sql
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: ForgotPassword.jsx  Login.jsx  Signup.jsx
