[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
diesel = { version = "2.0", features = ["postgres", "chrono"] }
serde = {version = "1.0", features = ["derive"] }
dotenv = "0.15"
printpdf = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
actix-multipart = "0.6"
actix-files = "0.6"
